
  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih
    
********************************************************************************

  20.02.2023
  deviceServiceVersion = 1013689
  
  [-] Fixed error with printDuplicateReceipt method
  
********************************************************************************

  08.02.2023
  deviceServiceVersion = 1013688
  
  [+] Added parameter duplicateReceipt. Valid values are:
      DUPLICATE_RECEIPT_DEVICE = 0; // Uses device command 0x8C, print document copy
      DUPLICATE_RECEIPT_DRIVER = 1; // Document copy printed by driver
  
********************************************************************************

  26.01.2023
  deviceServiceVersion = 1013687
  
  [+] Added method checkItemCode2 to class ShtrihFiscalPrinter113

********************************************************************************

  20.01.2023
  deviceServiceVersion = 1013686
  
  [+] Added directIO command SMFPTR_DIO_CHECK_FDO_CONNECTION = 0x93 to 
      check connection to FDO server
  
********************************************************************************

  16.01.2023
  deviceServiceVersion = 1013685
  
  [-] Fixed error with frame synchronization in protocol version 2.0

********************************************************************************

  29.12.2022
  deviceServiceVersion = 1013684
  
  [-] Fixed error with reading error code text
	  
********************************************************************************

  16.12.2022
  deviceServiceVersion = 1013683
  
  [-] Added fdoMode=3 to enable and disable sending documents to FDO server 
      (table 21, field 2)
  
********************************************************************************

  13.12.2022
  deviceServiceVersion = 1013682
  
  [-] Fixed error with PPP port close
  